--- a/src/styles/buttondropdown.scss
+++ b/src/styles/buttondropdown.scss
@@ -35,7 +35,7 @@ div.button-dropdown {
 			background-color: $dark-theme-color;
 
 			&.secondary {
-				background-color: white;
+				background-color: rgba(0,0,0,0);
 			}
 		}
 
