--- a/src/styles/account.scss
+++ b/src/styles/account.scss
@@ -79,27 +79,41 @@
 	margin-top: 10px;
 
 	.member {
-		margin-bottom: 10px;
+		margin-bottom: 16px;
 		display: flex;
+
+		.account-circle {
+			flex: 0;
+			
+		}
+
+		.account-names {
+			flex: 1;
+
+			.account-name-real {
+				font-weight: 700;
+			}
+		}
+
+		.account-types span.btn {
+			flex: 0;
+			color: rgba(0,0,0,0.3);
+			border-bottom: 1px dashed rgba(0,0,0,0.3);
+			text-align: right;
+			vertical-align: bottom;
+
+			i {
+				font-size: 14px;
+				line-height: 16px;
+				vertical-align: bottom;
+				padding-left: 2px;
+			}
+		}
 
 		span {
 			display: block;
-			flex: 1;
-
-			&:last-child {
-				flex: 0;
-				font-size: 10px;
-				line-height: 10px;
-				padding: 3px;
-				text-transform: uppercase;
-				letter-spacing: 0.2px;
-				border-radius: 2px;
-				color: white;
-				text-align: right;
-				background-color: rgba(0,0,0,0.2);
-			}
-
 		}
+
 	}
 
 	.create-member {
@@ -115,16 +129,62 @@
 		&>div {
 			display: flex;
 			margin-bottom: 8px;
+
 			label {
 				flex: 1;
+				font-weight: 700;
 			}
 
 			input {
-				flex: 3;
+				margin-left: 8px;
 			}
+
+			input, div.Select {
+				flex: 3;
+
+				div.Select-control .Select-placeholder {
+					padding-left: 8px;
+				}
+			}
+
 		}
 	}
 
+
+.accounttype-menu {
+	min-width: 240px;
+
+	.accounttype-rule {
+		height: 1px;
+		width: 100%;
+		background-color: rgba(0,0,0,0.1);
+	}
+
+	.accounttype-option {
+		display: flex;
+		padding: 16px;
+		padding-left: 16px;
+		cursor: pointer;
+
+		.check {
+			min-width: 16px;
+			margin-right: 4px;
+			i {
+				font-size: 16px;
+				line-height: 16px;
+			}
+		}
+
+		.title {
+			font-weight: 700;
+		}
+
+		.desc {
+			color: rgba(0,0,0,0.4);
+		}
+	}
+
+}
 
 
 }
