--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -26,6 +26,18 @@
 .icon {
 	display: inline-block;
 	background-color: $light-gray;
+
+	border-radius: 16px;
+	min-width: 32px;
+	min-height: 32px;
+	margin-right: 8px;
+
+	span {
+		color: white;
+		font-size: 16px;
+		line-height: 32px;
+		text-align: center;
+	}
 }
 
 .select-circle {
