--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -37,20 +37,20 @@
 	}
 }
 
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  //src: url(iconfont/MaterialIcons-Regular.eot); /* For IE6-8 */
-  src: local('Material Icons'),
-       local('MaterialIcons-Regular'),
-       // /* Old file: url(iconfont/MaterialIcons-Regular.woff2) format('woff2'), */
-       // /* load new file */ 
-       // url(2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2'),
-       // url(iconfont/MaterialIcons-Regular.ttf) format('truetype');
-}
+// @font-face {
+//   font-family: 'Material Icons';
+//   font-style: normal;
+//   font-weight: 400;
+//   //src: url(iconfont/MaterialIcons-Regular.eot); /* For IE6-8 */
+//   src: local('Material Icons'),
+//        local('MaterialIcons-Regular'),
+//        // /* Old file: url(iconfont/MaterialIcons-Regular.woff2) format('woff2'), */
+//        // /* load new file */ 
+//        // url(2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2'),
+//        // url(iconfont/MaterialIcons-Regular.ttf) format('truetype');
+// }
 
-.material-icons{
-	font-family:'Material Icons';
-	font-style: normal;
-}
+// .material-icons{
+// 	font-family:'Material Icons';
+// 	font-style: normal;
+// }
