--- a/src/styles/accounts.scss
+++ b/src/styles/accounts.scss
@@ -6,6 +6,8 @@
 	.account-menu-section-title {
 		color: rgba(0,0,0,0.3);
 		font-size: 11px;
+		display: block;
+		margin: 16px 16px 0 16px;
 	}
 } 
 
