--- a/src/styles/goals.scss
+++ b/src/styles/goals.scss
@@ -53,7 +53,10 @@
 	}
 
 	.goal {
-		padding: 8px 0 8px 0;
+		padding: 16px;
+		border-radius: 4px;
+		box-shadow: 0 1px 4px rgba(0, 0, 0, 0.03), 0 1px 3px rgba(0, 0, 0, 0.06);
+		margin-top: 16px;
 
 		.goal-details {
 			display: flex;
@@ -76,10 +79,10 @@
 				padding-bottom: 4px;
 
 				span {
-				display:inline-block;
-				font-size:14px;
-				line-height: 16px;
-				margin-top: 3px;
+					display:inline-block;
+					font-size:14px;
+					line-height: 16px;
+					margin-top: 3px;
 				}
 			}
 
