--- a/src/styles/packingorders.scss
+++ b/src/styles/packingorders.scss
@@ -7,6 +7,10 @@
 	justify-content: flex-end;
 }
 
+.packing-orders-section {
+	padding: 32px 32px;
+}
+
 /* FLEX MEASUREMENTS */
 .packingorders-create-inventory-unit {
 	display:flex;
