--- a/src/styles/accounts.scss
+++ b/src/styles/accounts.scss
@@ -33,6 +33,14 @@
 		vertical-align: middle;
 		text-align: left;
 	}
+
+	.icon {
+		margin-right: 8px;
+	}
+
+	span.name {
+		color: #4f4f4f;
+	}
 }
 
 .nav-team {
