--- a/src/styles/inventory.scss
+++ b/src/styles/inventory.scss
@@ -57,8 +57,6 @@
     display: flex;
     flex-direction: column;
     background-color: #fafafa;
-    min-height: 100vh;
-    max-height: 100vh;
     border-left: 1px solid rgba(0,0,0,0.08);
     transition: flex 0.3s;
 
@@ -108,6 +106,7 @@
           border: 0;
           background-color: rgba(0,0,0,0);
           color: $primary;
+          padding: 0;
         }
       }
 
@@ -120,6 +119,7 @@
       .item {
         display: flex;
         flex-direction: row;
+        align-items: center;
 
         .item-img {
           height: 12px;
@@ -176,7 +176,6 @@
     display: flex; 
     border-bottom: 1px solid rgba(0,0,0,0.08);
     padding: 16px 0 15px 16px;
-    margin-left: 20px;
     cursor: pointer;
     background-color: white;
 
@@ -192,7 +191,7 @@
     }
 
     &>div {
-      padding-right: 48px; //gutter
+      padding-right: 24px; //gutter
       white-space: nowrap;
       overflow: ellipsis;
 
