--- a/src/styles/inventory.scss
+++ b/src/styles/inventory.scss
@@ -1,5 +1,11 @@
 .inventory {
 
+  height: calc(100% - 128px);
+
+  .page.smallDetail {
+    height: 100%;
+  }
+
 	.inventory-header {
 		display: flex;
 		padding-left: 36px;
@@ -22,7 +28,8 @@
 
 	.halves {
 		display: flex;
-		background-color:white;
+		background-color: white;
+    height: calc(100% - 48px);
 	}
 
 	.fixed {
@@ -37,6 +44,8 @@
 
 	.inventory-list {
     flex: 1;
+    height: 100%;
+    overflow-y: auto;
 
     &.list-padded {
     	padding-top: 32px;
@@ -89,7 +98,6 @@
     .i-detail-content {
       flex: 1;
       padding: 0 16px;
-      margin: 8px 0px;
       overflow: scroll;
 
       .task-title {
@@ -188,6 +196,10 @@
       line-height: 16px;
       text-transform: uppercase;
       border-bottom: 1px solid rgba(0,0,0,0.08);
+
+      .i-check {
+        visibility: hidden;
+      }
     }
 
     &>div {
@@ -240,7 +252,6 @@
     color: #43A6F6;
     font-weight: bold;
   }
-
 }
 
 .unflex {
@@ -277,18 +288,18 @@ div.zero-state {
 }
 
 .page .page-header {
-    display: flex;
-    flex-direction: row;
-    vertical-align: middle;
-    margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  vertical-align: middle;
+  margin-bottom: 20px;
 
-    h2 {
-      flex: 1;
-      font-size: 16px;
-    }
-
-    .filters {
-      flex: 0;
-      flex-basis: 300px;
-    }
+  h2 {
+    flex: 1;
+    font-size: 16px;
   }
+
+  .filters {
+    flex: 0;
+    flex-basis: 300px;
+  }
+}
