--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,4 +1,4 @@
-$sans-stack:'Camphor Pro', 'Interface', 'Helvetica';
+$sans-stack:'Apercu', 'Interface', 'Helvetica';
 $light-gray: rgba(0,0,0,0.1);
 $theme-color: #2198EE; //42AFFF;
 $dark-theme-color: #0068B4;
