--- a/src/styles/goals.scss
+++ b/src/styles/goals.scss
@@ -14,6 +14,7 @@
 	line-height: 16px;
 	color: black;
 
+
 	.goals-bottom-bar {
 		padding-top: 12px;
 		padding-bottom: 8px;
@@ -54,9 +55,39 @@
 
 	.goal {
 		padding: 16px;
-		border-radius: 4px;
-		box-shadow: 0 1px 4px rgba(0, 0, 0, 0.03), 0 1px 3px rgba(0, 0, 0, 0.06);
 		margin-top: 16px;
+		border-top: 1px solid rgba(0,0,0,0.05);
+		margin-left: -16px;
+		margin-right: -16px;
+		display: flex;
+
+		.remove-goal {
+			display: flex;
+			flex-direction: column;
+			vertical-align: middle;
+			line-height: 16px;
+			padding-top: 3px;
+			//align-items: center;
+			flex : 0;
+			padding-right: 16px;
+			
+			&>i:last-child {
+				color: #e74c3c;
+			}
+
+			&>i:last-child {
+				color: #e74c3c;
+			}
+		}
+
+		.goal-main {
+			flex: 1;
+		}
+
+		span.more {
+			font-size: 10px;
+			color: $primary;
+		}
 
 		.goal-details {
 			display: flex;
@@ -76,7 +107,7 @@
 			.goal-details-left {
 				flex: 1;	
 				padding-top: 3px;
-				padding-bottom: 4px;
+				padding-bottom: 2px;
 
 				span {
 					display:inline-block;
@@ -88,12 +119,12 @@
 
 
 			.goal-details-right {
-				font-size:12px;
+				font-size:14px;
 				line-height: 16px;
 				letter-spacing: 5%;
 				text-transform: uppercase;
 				padding-top: 5px;
-				padding-bottom: 4px;
+				padding-bottom: 2px;
 				color: #828282;
 				vertical-align: middle;
 
@@ -126,6 +157,7 @@
 
 		.goal-filled-bar {
 			background-color: $theme-color;
+			background: linear-gradient(to left, #2087F1 , #0E4FDF);
 			color: rgba(255,255,255,0.5);
 			border-radius: 4px 0 0 4px;
 		}
