--- a/src/styles/inventory.scss
+++ b/src/styles/inventory.scss
@@ -269,7 +269,11 @@ div.zero-state {
     background-color: white;
     border-radius: 4px;
     box-shadow: $shadow-0;
-    margin: 50px auto;
+    margin: 50px 32px;
+
+    &:first-child {
+      margin-top: 0px;
+    }
 
      div.content {
       padding: 20px 16px;
