--- a/src/index.css
+++ b/src/index.css
@@ -134,9 +134,12 @@ ul div.menuContentWrapper div.rdr-Days {
   .trouble h6 {
     text-align: center; }
   .trouble p, .trouble li {
-    font-size: 11px; }
+    font-size: 12px;
+    line-height: 16px; }
   .trouble li {
     margin-bottom: 10px; }
+  .trouble a {
+    color: #49A8F3; }
 
 div.labelPrinter {
   padding-top: 50px;
