--- a/src/styles/oldstyles/labelPrinter.scss
+++ b/src/styles/oldstyles/labelPrinter.scss
@@ -7,11 +7,16 @@
 	}
 
 	p, li {
-		font-size: 11px;
+		font-size: 12px;
+		line-height: 16px;
 	}
 
 	li {
 		margin-bottom: 10px
+	}
+
+	a {
+		color: $primary;
 	}
 }
 
