--- a/src/styles/oldstyles/labelPrinter.scss
+++ b/src/styles/oldstyles/labelPrinter.scss
@@ -1,38 +1,37 @@
 .trouble {
 	max-width: 500px;
-	margin: 0 auto;
+	margin-left: 36px;
+	margin-bottom: 36px;
 
 	h6 {
-		text-align: center;
+		font-size: 14px;
+		line-height: 24px;
 	}
 
 	p, li {
-		font-size: 11px;
+		font-size: 12px;
+		line-height: 16px;
 	}
 
 	li {
-		margin-bottom: 10px
+		margin-bottom: 10px;
 	}
 }
 
 div.labelPrinter {
-	padding-top: $navbar-height;
-	padding-bottom: $navbar-height;
 	.stuff {
 		max-width: 300px;
-		margin: 0 auto;
+		margin-left: 36px;
 		box-shadow: $shadow-1;
 		padding: 20px;
 		background-color: white;
-		//max-height: 400px;
 		overflow: hidden;
+		border-radius: 4px;
 	}
 
 	input {
 		line-height: 34px;
 		font-size: 15.2px;
-		border: 0;
-		border-bottom: 2px solid rgba(0,0,0,0.1);
 
 		&:focus {
 			outline: none;
@@ -40,37 +39,39 @@ div.labelPrinter {
 	}
 
 	input, .multiselect, .select {
-		margin-bottom: 30px;
+		margin-top: 4px;
+		margin-bottom: 16px;
 	}
 
 	.inputLabel {
 		font-size: 13px;
-		color: rgba(0,0,0,0.6);
+		color: rgba(0, 0, 0, 0.6);
 	}
 
 	.marginer {
-		padding-top: 40px;
-
 		h2 {
 			text-align: center;
 			line-height: 48px;
+			font-weight: bold;
+			font-size: 18px;
 		}
 	}
 
 	button {
-		padding: 8px 16px;
+		padding: 12px 16px;
 		color: white;
 		text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 14px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border: none;
-    border-radius: 2px;
-    background-color: $primary;
-    width: 100%
-}
+		text-decoration: none;
+		display: inline-block;
+		font-size: 14px;
+		margin: 4px 2px;
+		cursor: pointer;
+		border: none;
+		border-radius: 4px;
+		background-color: $primary;
+		width: 100%;
+		font-family: "Apercu", "Interface", "Helvetica";
+	}
 
 	.regularprint {
 	  max-height: 1000px;
@@ -84,7 +85,6 @@ div.labelPrinter {
 
 	.reprint {
 		margin: -20px;
-		//box-shadow: $shadow-1;
 		padding: 20px;
 		background-color: white;
 		z-index: 999;
@@ -95,16 +95,12 @@ div.labelPrinter {
 	}
 
 	button.expandReprint {
-		display: block;
 		color: $primary;
 		background-color: white;
 		font-size: 13px;
-		margin-bottom: 20px;
-		display: flex;
-		flex-direction: row;
-		padding-left: 0px;
-		padding-right: 0px;
-		text-align: left;
+		text-align: center;
+		border: 1px solid $primary;
+		border-radius: 4px;
 
 		span {
 			flex: 1;
