--- a/src/styles/accounts.scss
+++ b/src/styles/accounts.scss
@@ -19,6 +19,8 @@
 	span.name {
 		display: block;
 		font-size: 14px;
+		font-family: "Apercu", "Interface", "Helvetica";
+		text-align: left;
 	}
 
 	span.username {
