--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,6 +1,6 @@
-$sans-stack:'Apercu', 'Interface', 'Helvetica';
+$sans-stack: 'Apercu', 'Interface', 'Helvetica';
 $light-gray: rgba(0,0,0,0.1);
-$theme-color: #2198EE; //42AFFF;
+$theme-color: #2198EE;
 $dark-theme-color: #0068B4;
 $baseline: 8px;
 $nav-width: 144px;
@@ -49,4 +49,3 @@ div, input, * {
 span {
 	line-height: 16px;
 }
-
