--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -1,6 +1,6 @@
 .d-nav {
 	z-index: 1;
-	background-color: #373A3D;
+	background-color: #3976FF;// #373A3D;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -9,14 +9,14 @@
 	display: flex;
 	flex-direction: column;
 
-	color: rgba(255,255,255, 0.4);
+	color: rgba(255, 255, 255, 0.6);
 	font-size: 13px;
 	line-height: 16px;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 
 	.nav-group {
-		border-bottom: 1px solid rgba(39,43,46,0.5);
+		border-bottom: 1px solid rgba(17, 79, 223, 0.6);
 		padding-left: 16px;
 
 		span {
@@ -25,7 +25,7 @@
 			font-size: 10px;
 			display: block;
 			padding: 16px 0;
-			color: rgba(255,255,255,0.2);
+			color: rgba(255, 255, 255, 0.8);
 		}
 
 		li {
@@ -34,7 +34,7 @@
 			.nav-icon {
 				height: 16px;
 				vertical-align: top;
-				opacity: 0.4;
+				opacity: 0.6;
 				margin-right: 8px;
 			}
 
@@ -44,7 +44,7 @@
 			}
 
 			a.active {
-				color: rgba(255,255,255,0.9);
+				color: rgba(255, 255, 255, 1);
 				img {
 					opacity: 1;
 				}
@@ -54,8 +54,7 @@
 	}
 
 	.logo {
-		background-color: #272B2E;
-		margin-bottom: 16px;
+		background-color: #0E4FDF;
 		height: 128px;
 	}
 }
@@ -80,7 +79,7 @@
 	}
 
 	.nav-team {
-		margin: 0 36px;
+		margin-right: 36px;
 	}
 }
 
