--- a/src/styles/oldstyles/activity.scss
+++ b/src/styles/oldstyles/activity.scss
@@ -1,7 +1,7 @@
 .activity {
   display: flex;
-  max-width: 900px;
-  width: 50%;
+  max-width: 800px;
+  width: 80%;
   flex-direction: column;
 
   .activity-process {
@@ -166,6 +166,10 @@
   .dates {
     border-radius: 4px;
     border: 1px solid rgba(0,0,0,0.1);
+
+    span {
+      font-family: "Apercu", "Interface", "Helvetica";
+    }
   }
 }
 
