--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,5 +1,5 @@
 button {
-	padding: 8px 12px 8px 12px;
+	padding: 12px 16px;
 	font-size: 12px;
 	line-height: 16px;
 	background-color: $theme-color;
@@ -9,6 +9,7 @@ button {
 	outline: none;
 	display:block;
 	cursor: pointer;
+	font-family: "Apercu", "Interface", "Helvetica";
 
 	&.secondary {
 		background-color: rgba(0,0,0,0);
@@ -25,5 +26,4 @@ button {
 		background-color: #c3c3c3;
 		color: #838383;
 	}
-
 }
